# nessclient

./: .ruff.toml  Pipfile  README.md  pyproject.toml  readthedocs.yml  setup.py
.devcontainer/: devcontainer.json
.github/workflows/: workflow.yaml
docs/: Makefile  api.md  conf.py  developing.md  examples.md  index.md
examples/: listening_for_events.py  sending_commands.py
nessclient/: __init__.py  alarm.py  client.py  connection.py  event.py  packet.py  packet_new.py
nessclient/cli/: __main__.py  events.py  send_command.py
nessclient/cli/server/: __init__.py  alarm.py  alarm_server.py  server.py  zone.py
nessclient_tests/: test_alarm.py  test_client.py  test_dummy_server.py  test_event.py  test_examples.py  test_packet.py
nessclient_tests/fixtures/: __init__.py  generate_test_packets.py  make_random_lists.py  real_captured_test_data.py
scripts/: setup  test
stubs/: serial.pyi  serial_asyncio.pyi
